--- a/Update.plist
+++ b/Update.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.dukes.w3cspecstyles</string>
+			<string>com.duke.w3cspecstyles</string>
 			<key>Developer Identifier</key>
 			<string>J228DMT455</string>
 			<key>CFBundleVersion</key>
