--- a/Update.plist
+++ b/Update.plist
@@ -12,9 +12,9 @@
 			<key>CFBundleVersion</key>
 			<string>1.1</string>
 			<key>CFBundleShortVersionString</key>
-			<string>1</string>
+			<string>1.1</string>
 			<key>URL</key>
-			<string>https://github.com/downloads/emersonvinicius/W3C-Spec-Styles-Safari-Extension/w3c_spec_styles.safariextz</string>
+                        <string>https://github.com/downloads/emersonvinicius/w3c-spec-styles-safari-extension/w3c_spec_styles-1.1.safariextz</string>
 		</dict>
 	</array>
 </dict>
