--- a/Info.plist
+++ b/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Author</key>
 	<string>Emerson Vinicius</string>
+	<key>Builder Version</key>
+	<string>7534.52.7</string>
 	<key>CFBundleDisplayName</key>
 	<string>W3C Spec Styles</string>
 	<key>CFBundleIdentifier</key>
